# converso

./: .env.example  .gitignore  Dockerfile  GEMINI.md  Makefile  PRD.md  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  fix-docker-network.sh  fly.toml  mypy.ini  nginx.conf  pyproject.toml  pytest.ini  railway.json  render.yaml  requirements.txt  start.sh
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 001_calcom_and_agent_assignment.py  002_add_campaigns_table.py  003_sms_fallback_column.py  004_call_config_column.py  005_human_handoff_flag.py  2241ab9937ec_fix_missing_columns.py  369b4590627d_add_calcom_base_url_to_companies.py  3984c59cacc7_add_nudge_interval_to_leads.py  656706908acd_make_sales_agent_id_optional.py  8655ac80a088_add_manual_calendar_url_to_users.py  8bfe72b5879f_add_managed_calendar_to_users.py  b00c8a1c7558_add_company_id_to_messages.py
app/: __init__.py  check_leads.py  fix_missed_booking.py  main.py
app/api/: __init__.py  analytics.py  auth.py  campaigns.py  health.py  leads.py  meetings.py  messages.py  platform.py  users.py  webhooks.py
app/config/: mortgage_campaign.py
docker-entrypoint-initdb.d/: init-calcom.sql
docs/: data_flow.md  deployment_status.md
frontend/: .dockerignore  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
scripts/: deploy.sh  populate_test_data.py  setup-dev.sh  test.sh
tests/: __init__.py  conftest.py  test_api.py  test_health.py  test_import.py  test_integrations.py  test_models.py  test_platform.py  test_roles.py  test_workflow.py
(+58 files in other folders)
